updated dependencies to run rest successfully